<resources>
    <string name="app_name">BookLister</string>

    <!-- Menu Voices -->
    <string name="action_add_book">Add a book</string>
    <string name="action_settings">Settings</string>


    <!-- SharedPreference items -->
    <string name="language_list_label">Book Research Language</string>
    <string name="language_list_item_label_italian">Italian</string>
    <string name="language_list_item_label_english">English</string>
    <string name="language_list_item_value_italian">italian</string>
    <string name="language_list_item_value_english">english</string>
    <string name="language_list_key" translatable="false">language</string>

    <!-- Book List Item -->
    <string name="add_book_activity_label">Add a book</string>
    <string name="book_cover">book cover</string>
    <string name="book_title">Book Title</string>
    <string name="book_author">Book Author</string>
    <string name="book_pages">Book Pages</string>

    <!-- Add Book activity -->
    <string name="message_add_new_book">Add a new book</string>
    <string name="hint_search_book">insert the title here</string>
    <string name="button_search_book">Search book</string>
    <string name="button_save_book">Save Book</string>
    <string name="empty_field">unknown</string>

    <!-- Retrofit Util -->
    <string name="error_message_retrofit">Error contacting the server.Please try again.</string>
    <string name="warning_missing_title">Please, insert a title</string>

    <!-- Services and Notification -->
    <string name="notification_title">Got a new book?</string>
    <string name="notification_description">Add it to your library</string>
    <string name="notification_action_YES">YES, ADD IT</string>
    <string name="notification_action_NO">NO, THANKS</string>


</resources>
