<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/padding_large"
            android:text="@string/message_add_new_book"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/bookTitleInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:focusable="auto"
            android:hint="@string/hint_search_book"
            android:inputType="text"
            android:nextFocusDown="@id/search_book_button" />

        <Button
            android:id="@+id/search_book_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:nextFocusDown="@id/saveBookButton"
            android:text="@string/button_search_book" />

        <LinearLayout
            android:id="@+id/BookResultsView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="invisible">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:padding="@dimen/padding_medium">

                    <ImageView
                        android:id="@+id/bookImage"
                        android:layout_width="@dimen/bookImage"
                        android:layout_height="@dimen/bookImage"
                        android:contentDescription="@string/book_cover" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:paddingLeft="@dimen/padding_small"
                        android:paddingTop="@dimen/padding_small">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/book_title"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/bookTitle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            tools:text="Book Title" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/book_author"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/bookAuthor"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            tools:text="Book Author" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/book_pages"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/bookPages"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            tools:text="Number of pages" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    android:padding="@dimen/padding_medium">

                    <Button
                        android:id="@+id/saveBookButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/button_save_book" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>